Update examples with OpenAI's o3

--- a/examples/openai-python/openai.ipynb
+++ b/examples/openai-python/openai.ipynb
@@ -4,8 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Code Interpreting with o1 by OpenAI\n",
-        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for o1. "
+        "# Code Interpreting with OpenAi models\n",
+        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for OpenAI's model. You can choose from models with function-calling support, such as o1 or o3-mini."
       ]
     },
     {
@@ -167,7 +167,8 @@
         "    \n",
         "    print('Waiting for the LLM to respond...')\n",
         "    completion = client.chat.completions.create(\n",
-        "        model=\"o1\",\n",
+        "        model=\"o3\", #Choose different model by uncommenting\n",
+        "        # model=\"o1\",\n",
         "        messages=[\n",
         "            {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
         "            {\"role\": \"user\", \"content\": user_message}\n",
