Wording in OpenAI examples

--- a/examples/openai-python/openai.ipynb
+++ b/examples/openai-python/openai.ipynb
@@ -5,7 +5,8 @@
       "metadata": {},
       "source": [
         "# Code Interpreting with OpenAi models\n",
-        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for OpenAI's model. You can choose from models with function-calling support, such as o1 or o3-mini."
+        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for OpenAI's model. You can choose from models with function-calling support, such as o1 or o3-mini.\n",
+        "We let the LLM write the code to train a machine learning model on a dataset from Kaggle. We use the E2B Code Interpreter SDK for running the LLM-generated code tasks in a secure and isolated cloud environment."
       ]
     },
     {
