Replace WatsonX TypeScript Jupyter notebook with a Node.js module

--- a/examples/watsonx-ai-code-interpreter-python/granite_code_interpreter_py.ipynb
+++ b/examples/watsonx-ai-code-interpreter-python/granite_code_interpreter_py.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Installations\n",
+    "### 1. Dependencies\n",
     "First, we install IBM WatsonX AI, OpenAI, and the E2B Code Interpreter SDK."
    ]
   },
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Imports and API keys\n",
+    "### 2. API Keys\n",
     "\n",
     "You need to get your API keys and save them in .env file. You can copy and rename the .env.template file. We import all necessary libraries.\n",
     "\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
